src/main/metadata-au/objects/MBK_Bulk_Message__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PageSearchCount__c</fullName>
        <label>PageSearchCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PageSearchIDs__c</fullName>
        <label>PageSearchIDs</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PageSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PageSearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Sending_Time__c</fullName>
        <label>Set Sending Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Object_Id__c</fullName>
        <label>Source Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Code__c</fullName>
        <label>Template Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channel__c</fullName>
        <label>channel</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>MBK Bulk Message</label>
    <nameField>
        <displayFormat>MBI-{0000000000}</displayFormat>
        <label>MBK Bulk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBK Bulk Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>